jpeg-utils edits
git-svn-id: https://svn.csail.mit.edu/rrg_pods@37 d41ffffc-f2b2-4b44-b683-edcb61ded693

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,6 @@ cmake_minimum_required(VERSION 2.6.0)
 set(POD_NAME jpeg-utils)
 include(cmake/pods.cmake)
 
-include(cmake/FindIPP.cmake)
+#include(cmake/FindIPP.cmake)
 
 add_subdirectory(src)
