added libjpeg linking for osx build
git-svn-id: https://svn.csail.mit.edu/rrg_pods@624 d41ffffc-f2b2-4b44-b683-edcb61ded693

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,4 +4,7 @@ cmake_minimum_required(VERSION 2.6.0)
 set(POD_NAME jpeg-utils)
 include(cmake/pods.cmake)
 
+set(LIBJPEG_CFLAGS "")
+set(LIBJPEG_LIBRARIES -ljpeg)
+
 add_subdirectory(src)
