--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -7,6 +7,8 @@ add_library(jpeg-utils SHARED jpeg-utils.c)
 # changes.
 set_target_properties(jpeg-utils PROPERTIES SOVERSION 1)
 
+target_link_libraries(jpeg-utils ${LIBJPEG_LIBRARIES})
+
 # make the header public
 # install it to include/hello
 pods_install_headers(jpeg-utils.h DESTINATION jpeg-utils)
