use cmake module to find jpeg library
git-svn-id: https://svn.csail.mit.edu/rrg_pods@798 d41ffffc-f2b2-4b44-b683-edcb61ded693

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -7,7 +7,7 @@ add_library(jpeg-utils SHARED jpeg-utils.c)
 # changes.
 set_target_properties(jpeg-utils PROPERTIES SOVERSION 1)
 
-target_link_libraries(jpeg-utils ${LIBJPEG_LIBRARIES})
+target_link_libraries(jpeg-utils ${JPEG_LIBRARIES})
 
 # make the header public
 # install it to include/hello
