--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,6 @@ cmake_minimum_required(VERSION 2.6.0)
 set(POD_NAME jpeg-utils)
 include(cmake/pods.cmake)
 
-set(LIBJPEG_CFLAGS "")
-set(LIBJPEG_LIBRARIES -ljpeg)
+find_package (JPEG REQUIRED)
 
 add_subdirectory(src)
