added missing add_directory for JPEG include
git-svn-id: https://svn.csail.mit.edu/rrg_pods@809 d41ffffc-f2b2-4b44-b683-edcb61ded693

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -7,6 +7,8 @@ add_library(jpeg-utils SHARED jpeg-utils.c)
 # changes.
 set_target_properties(jpeg-utils PROPERTIES SOVERSION 1)
 
+# JPEG includes and libraries
+include_directories(${JPEG_INCLUDE_DIR})
 target_link_libraries(jpeg-utils ${JPEG_LIBRARIES})
 
 # make the header public
